--- a/public/index.html
+++ b/public/index.html
@@ -264,11 +264,11 @@
                         <div class="settings-grid">
                             <div class="settings-card" onclick="showSettingsSubsection('users')">
                                 <div class="settings-card-icon">
-                                    <i class="fas fa-users-cog"></i>
+                                    <i class="fas fa-user-shield"></i>
                                 </div>
                                 <div class="settings-card-content">
                                     <h3>User Management</h3>
-                                    <p>Manage system users, roles, and permissions</p>
+                                    <p>Manage system users, roles and permissions for your POS system</p>
                                 </div>
                                 <div class="settings-card-arrow">
                                     <i class="fas fa-chevron-right"></i>
