--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" data-section="admin" class="nav-link" style="display: none;">
+                                        <a href="#" data-section="admin" class="nav-link admin-nav-link">
                                             <div class="nav-icon">
                                                 <i class="fas fa-cog"></i>
                                             </div>
