--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,13 @@
                     <form id="loginForm" class="login-form">
                         <div class="form-group">
                             <div class="input-wrapper">
-                                <i class="fas fa-user input-icon"></i>
+                                <i class="fas fa-user input-icon" style="color: #6b7280;"></i>
                                 <input type="text" id="username" name="username" placeholder="Username" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-wrapper">
-                                <i class="fas fa-lock input-icon"></i>
+                                <i class="fas fa-lock input-icon" style="color: #6b7280;"></i>
                                 <input type="password" id="password" name="password" placeholder="Password" required>
                             </div>
                         </div>
@@ -46,9 +46,6 @@
                             <i class="fas fa-arrow-right"></i>
                         </button>
                     </form>
-                    <div class="login-footer">
-                        <p>Default credentials: admin / password</p>
-                    </div>
                 </div>
             </div>
         </div>
