--- a/public/index.html
+++ b/public/index.html
@@ -170,8 +170,13 @@
                     <section id="posSection" class="content-section active">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Point of Sale</h1>
-                                <p class="section-subtitle">Process sales and manage transactions</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-cash-register"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Point of Sale</h1>
+                                    <p class="section-subtitle">Process sales and manage transactions</p>
+                                </div>
                             </div>
                             <div class="header-actions">
                                 <button class="btn btn-outline">
@@ -275,8 +280,13 @@
                     <section id="productsSection" class="content-section">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Products</h1>
-                                <p class="section-subtitle">Manage your product inventory</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-box"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Products</h1>
+                                    <p class="section-subtitle">Manage your product inventory</p>
+                                </div>
                             </div>
                             <div class="header-actions">
                                 <button id="addProductBtn" class="btn btn-primary">
@@ -322,8 +332,13 @@
                     <section id="categoriesSection" class="content-section">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Categories</h1>
-                                <p class="section-subtitle">Organize your products by categories</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-tags"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Categories</h1>
+                                    <p class="section-subtitle">Organize your products by categories</p>
+                                </div>
                             </div>
                             <div class="header-actions">
                                 <button id="addCategoryBtn" class="btn btn-primary">
@@ -367,8 +382,13 @@
                     <section id="customersSection" class="content-section">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Customers</h1>
-                                <p class="section-subtitle">Manage customer information</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-users"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Customers</h1>
+                                    <p class="section-subtitle">Manage customer information</p>
+                                </div>
                             </div>
                             <div class="header-actions">
                                 <button id="addCustomerBtn" class="btn btn-primary">
@@ -400,8 +420,13 @@
                     <section id="salesSection" class="content-section">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Sales History</h1>
-                                <p class="section-subtitle">View and manage sales transactions</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-receipt"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Sales History</h1>
+                                    <p class="section-subtitle">View and manage sales transactions</p>
+                                </div>
                             </div>
                         </div>
                         <div class="section-card">
@@ -429,8 +454,13 @@
                     <section id="reportsSection" class="content-section">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Reports & Analytics</h1>
-                                <p class="section-subtitle">Business insights and performance metrics</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-chart-line"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Reports & Analytics</h1>
+                                    <p class="section-subtitle">Business insights and performance metrics</p>
+                                </div>
                             </div>
                         </div>
                         <div class="reports-grid">
@@ -463,8 +493,13 @@
                     <section id="adminSection" class="content-section">
                         <div class="section-header">
                             <div class="header-left">
-                                <h1 class="section-title">Admin Panel</h1>
-                                <p class="section-subtitle">System administration and configuration</p>
+                                <div class="section-icon">
+                                    <i class="fas fa-cog"></i>
+                                </div>
+                                <div class="header-content">
+                                    <h1 class="section-title">Admin Panel</h1>
+                                    <p class="section-subtitle">System administration and configuration</p>
+                                </div>
                             </div>
                         </div>
 
